# stallscope

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
docs/: all_in_one_gpu_network_monitoring_blueprint.md  docker_compose_gpu_guide.md  integration_test_guide.md
src/monitoring_tool/: __init__.py  alerts.py  cli.py  collectors.py  jobcontext.py  models.py  nccl.py  nccl_diag.py  pfc.py  profiler.py  rdma.py
tests/: test_alerts.py  test_collectors_parse.py  test_jobcontext.py  test_nccl.py  test_nccl_diag.py  test_pfc.py  test_profiler.py  test_rdma.py
tests/fixtures/: ethtool_generic.txt  ethtool_mlx5.txt
tests/integration/: test_multi_gpu_integration.py
