[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "monitoring-tool"
version = "0.1.0"
description = "NVIDIA GPU and network monitoring with simple job performance profiler"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
monitoring-tool = "monitoring_tool.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
  "integration: tests requiring real GPU/NVIDIA runtime"
]
