[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stallscope"
version = "0.1.0"
description = "GPU training observability with RDMA fabric health correlation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []
license = "Apache-2.0"

[project.scripts]
stallscope = "monitoring_tool.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
  "integration: tests requiring real GPU/NVIDIA runtime"
]
